--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         xhttp.onreadystatechange = function() {
             if (this.readyState == 4 && this.status == 200) {
                 parseText = JSON.parse(xhttp.responseText);
-                //console.log(parseText);
+                console.log(parseText);
 
                 // Display the data
                 var data = '';
